# QueryMind

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  init-db.sql  render.yaml
backend/: Dockerfile  alembic.ini  eval_suite.json  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_add_connections_table.py
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py  logging.py
backend/app/db/: models.py  session.py
backend/app/schemas/: query.py
backend/app/services/: explain_gate.py  gx_validate.py  nl2sql_agent.py  orchestrator.py  schema_context.py  schema_setup.py  sql_safety.py  table_parser.py
backend/app/tests/: test_api.py  test_eval.py  test_nl2sql_agent.py  test_sql_safety.py
frontend/: Dockerfile  Procfile  api_client.py  pyproject.toml  requirements.txt  streamlit_app.py
frontend/.streamlit/: config.toml
